--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,17 +1,11 @@
-
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'my_new_project'
+# dbt_project.yml
+name: 'the_bulwark'
+profile: 'the_bulwark'
 version: '1.0.0'
 config-version: 2
+dbt-cloud:
+    project-id: 70471823552522
 
-# This setting configures which "profile" dbt uses for this project.
-profile: 'default'
-
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -19,24 +13,38 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-target-path: "target"  # directory which will store compiled SQL files
-clean-targets:         # directories to be removed by `dbt clean`
+target-path: "target"
+clean-targets:
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In dbt, the default materialization for a model is a view. This means, when you run 
-# dbt run or dbt build, all of your models will be built as a view in your data platform. 
-# The configuration below will override this setting for models in the example folder to 
-# instead be materialized as tables. Any models you add to the root of the models folder will 
-# continue to be built as views. These settings can be overridden in the individual model files
-# using the `{{ config(...) }}` macro.
-
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
-      +materialized: table
+  the_bulwark:
+    marts:
+        core:
+          +materialized: table
+          +enabled: true
+          reports:
+            +schema: final_reports
+        intermediate:
+          +enabled: true
+        strategy:
+          +enabled: true
+          +schema: strategy
+        operations:
+          +materialized: table
+          +enabled: true
+          +schema: operations
+    staging:
+      +materialized: view
+      other:
+        +enabled: false
+
+tests:
+    the_bulwark:
+      +store_failures: false
+      +schema: dbt_test_failures
+
+snapshots:
+  the_bulwark:
+    +schema: snapshots
