--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,6 +23,8 @@ models:
         core:
           +materialized: table
           +enabled: true
+          core:
+            +schema: core
           reports:
             +schema: reports
     staging:
